# video-translator

./: .dockerignore  .gitignore  =2.0.10  BUILD_INSTRUCTIONS.md  CHECK_VENV.md  CLEANUP_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_ELECTRON.md  DEPLOY_STANDALONE.md  DOCKER_BUILD_LOGS.md  DOCKER_DEPLOYMENT.md  DOCKER_SPACE_REQUIREMENTS.md  Dockerfile  ELECTRON_DEPLOYMENT.md  ELECTRON_DOCKER.md  FRONTEND_HOT_RELOAD.md  HOT_RELOAD_SETUP.md  Makefile  NEXT_STEPS.md  PATH_FIX_VERIFICATION.md  QUICK_START_APPIMAGE.md  README.md  SPACE_CLEANUP_GUIDE.md  SPEECH_SPEED_FIX.md  STANDALONE_APPIMAGE_GUIDE.md  TESTING_VIDEOS.md  TRANSLATION_FIX_VERIFICATION.md  TRANSLATION_PERFORMANCE.md  WHERE_IS_UPLOADS.md  add-test-video.sh  build-appimage.sh  check-uploaded-video.sh  check-venv.sh  clean-home-cache.sh  cleanup-before-docker.sh  cleanup-full.sh  cleanup-local.sh  cleanup_disk.sh  cleanup_docker_builds.sh  complete-cleanup.sh  (+24 more)
backend-python-ml-v2/: .dockerignore  .gitignore  .service-summary.txt  BUILD_FIXES.md  CHECKLIST.md  COMPLETION_REPORT.md  DEPLOYMENT.md  Dockerfile  FINAL_NOTES.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPORT_FIX.md  INDEX.md  INTEGRATION_GUIDE.md  Makefile  NEXT_STEPS.md  QUICK_START.md  README.md  READY_TO_TEST.md  SUMMARY.md  TESTING_GUIDE.md  entrypoint.sh  generate_proto.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test_startup.py  verify_imports.py
backend-python-ml-v2/src/: __init__.py  main.py
backend-python-ml-v2/src/app_logging/: __init__.py  (+1 more)
backend-python-ml-v2/tests/: conftest.py
(+261 files in other folders)
